# paperless-ai-patched

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COPILOT.md  Dockerfile  Dockerfile.lite  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  server.js  swagger.js  system-prompt.md
.github/: copilot-instructions.md
.github/workflows/: docker-build-push.disabled  docker-build-push.yml  docker-ghcr.disabled  docker-ghcr.yml
Included_Fixes/: README.md
Included_Fixes/CI-001-auto-version-tagging/: README.md
Included_Fixes/PR-747-history-cleanup/: PR-747-DOCUMENTATION.md  README.md
Included_Fixes/PR-772-infinite-retry-fix/: PR-772-DOCUMENTATION.md
Included_Fixes/SEC-002-urllib3-cve-2026-21441/: README.md
OPENAPI/: openapi.json
config/: config.js
docker/: entrypoint-node.sh
docs/: Docker-Hub.md  TODO.md
docs/included_fixes/: FIX_LIST.md  README.md
rag_service/: .gitignore  Dockerfile  Justfile  main.py  pyproject.toml
routes/: setup.js
services/: azureService.js  chatService.js  customService.js  externalApiService.js  manualService.js  ollamaService.js  openaiService.js  paperlessService.js  serviceUtils.js  setupService.js
tests/: test-model-token-limits.js  test-openai-integration.js  test-openai-v6-upgrade.js  test-pr772-fix.js  test-provider-aware-config.js  test-responses-api.js  test-restriction-service.js  test-system-prompt-file.js  test-system-prompt-loading.js  test-temperature-support.js
views/: chat.ejs  dashboard.ejs  history.ejs  manual.ejs  playground.ejs  settings.ejs  setup.ejs
(+13 files in other folders)
